updated some files

--- a/newapp/templates/index.html
+++ b/newapp/templates/index.html
@@ -1,5 +1,13 @@
 <html>
     <body>
-        Hello {{name}} and my age is {{age}}
+
+        {% for val in data %}
+
+            <p>{{ val.name }}</p>
+            <p>{{ val.age }}</p>
+            <p>{{ val.mobile }}</p>
+
+        {% endfor %}
+
     </body>
 </html>
