updated some files

--- a/newapp/templates/addnew.html
+++ b/newapp/templates/addnew.html
@@ -1,6 +1,11 @@
 <html>
     <body>
         <h1>Add New Customer</h1>
+        <form method = "post">
+            {% csrf_token %}
+            {{ formset }}
+            <input type = "Submit" value = "OK" />
+        </form>
 
     </body>
 </html>
